--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/animejs": "^3.1.13",
     "@types/escape-html": "^1.0.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "22.5.4",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
