--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@relume_io/relume-tailwind": "^1.3.0",
     "@relume_io/relume-ui": "^1.3.0",
+    "@studio-freight/lenis": "^1.0.42",
     "@types/recharts": "^1.8.29",
     "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.0",
@@ -60,6 +61,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "7.45.4",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "recharts": "^2.15.1",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
