--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "7.45.4",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.15.1",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
