--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-email/components": "^0.0.42",
+    "@react-email/render": "^1.1.2",
     "@relume_io/relume-tailwind": "^1.3.0",
     "@relume_io/relume-ui": "^1.3.0",
     "@studio-freight/lenis": "^1.0.42",
@@ -50,7 +52,9 @@
     "framer-motion": "^12.4.7",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "juice": "^11.0.1",
     "lucide-react": "^0.378.0",
+    "nanoid": "^5.1.5",
     "next": "^15.1.5",
     "next-sitemap": "^4.2.3",
     "payload": "latest",
@@ -64,6 +68,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.15.1",
+    "resend": "^4.6.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
