--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "juice": "^11.0.1",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.378.0",
     "nanoid": "^5.1.5",
     "next": "^15.1.5",
