--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "recharts": "^2.15.1",
     "resend": "^4.6.0",
     "sharp": "0.32.6",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
